fix SonarQube Issue